web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
