myingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: 10.0.6.30 # Replace with your public IP address
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8080
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
